--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@babel/core": "^7.24.8",
     "@babel/preset-env": "^7.24.8",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-react-native-web": "^0.19.12",
     "eslint-plugin-react": "^7.34.4",
     "tape": "^5.7.4",
     "webpack": "^5.93.0",
@@ -49,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
